# rookeen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  rookeen.toml
.github/workflows/: ci.yml
bench/: nlp_wiki_oldid_1201524046.html  run_bench.py
bench/results/: .gitkeep
docs/: BGE_M3_ANALYSIS.md  test_embeddings_similarity_bge_m3_en_mini_length_analysis.py  test_embeddings_similarity_bge_m3_length_analysis.py
results/: .gitkeep
rookeen/: __init__.py  __main__.py  cli.py  cli_func.py  config.py  errors.py  language.py  models.py  pipeline.py  scraping.py
rookeen/analyzers/: __init__.py  base.py  dependency.py  embeddings.py  embeddings_backends.py  keywords.py  lexical_stats.py  ner.py  pos.py  readability.py  sentiment.py
rookeen/export/: __init__.py  conllu.py  docbin.py  parquet.py  spacy_json.py  ud_conllu.py
rookeen/plugins/: embeddings.py
rookeen/utils/: __init__.py  logging.py  robots.py
schemas/: rookeen_v1.json
scripts/: VALIDATION_README.md  VALIDATION_SCRIPTS_CI.md  pipeline_demo.sh  pipeline_tools.py  run_demo_tests.py  test_validation.py  validate_cli_chain_fixed.sh  validate_for_ci.py  validate_streaming_mode.sh
test_data/: invalid_analyzer_missing_required.json  invalid_missing_required.json  invalid_wrong_types.json  valid_comprehensive.json  valid_minimal.json
tests/: conftest.py
tests/e2e/: __init__.py  helpers.py  test_analyzer_selection.py  test_conllu_local.py  test_conllu_stanza.py  test_de_wikipedia_oldid.py  test_embeddings_bge_m3.py  test_embeddings_minilm.py  test_embeddings_openai_te3.py  test_embeddings_similarity_bge_m3.py  test_embeddings_similarity_minilm.py  test_en_wikipedia_oldid.py  test_es_wikipedia_oldid.py  test_fr_wikipedia_oldid.py  test_gutenberg_en.py  test_longform_local.py  test_mixed_batch.py  test_sentiment_local.py  test_testdata_integration.py  test_web_local_text.py
tests/integration/: test_multilingual_local.py  test_pipeline_local_stdin.py  test_pos_ner_local.py
tests/test_data/: de_short.txt  en_medium.txt  en_short.txt  mixed_short.txt  multilingual_test.txt  sample.txt  urls.txt
tests/test_data/embeddings/: pairs_dissimilar.jsonl  pairs_similar.jsonl
tests/test_data/longform/: gutenberg_en_excerpt.txt
tests/test_data/multilingual/: ar_medium.txt  de_medium.txt  en_medium.txt  es_medium.txt  fr_medium.txt  ja_medium.txt  ua_medium.txt  zh_medium.txt
tests/test_data/sentiment/: neg.txt  neu.txt  pos.txt
tests/test_data/ud/: clean_en.txt  web_en.txt
tests/test_data/web/: noisy_html_en.snapshot.json  noisy_html_en.snapshot_README.md  noisy_html_en.txt  wiki_nlp_en.txt
tests/unit/: __init__.py  test_keywords.py  test_lexical_stats.py  test_ner_presence.py  test_ner_unsupported_blank.py  test_pos_basic.py  test_readability.py
